--- a/fe/src/highlight-box/highlight-box.component.scss
+++ b/fe/src/highlight-box/highlight-box.component.scss
@@ -1,197 +1,13 @@
-:host.names-hidden {
-    .box .name {
-        display: none;
-    }
-}
+:host {
 
-:host([disabled="true"]) .box {
-    display: none !important;
-}
-
-.box {
-    position: absolute;
-    display: block;
-    border: 2px dotted rgb(61, 133, 253);
-    pointer-events: none;
-    z-index: 10;
-
-    &.is-at-top .actions, &.is-at-top .name { 
-        transform: translateY(0%); 
+    .highlighted {
+        border: 2px dotted rgb(61, 133, 253);
     }
 
-    &.previous-sibling-highlight,
-    &.next-sibling-highlight {
-        border: 1px dashed rgba(61, 133, 253, 1);
-    }
-    &.parent-highlight,
-    &.sibling-of-parent-highlight {
-        border: 1px dotted red;
-    }   
-    &.grand-parent-highlight {
-        border: 4px dotted yellow;
-    }
-
-    &#selected {
-        border-style: solid;
-        background-color: rgba(161, 161, 161, 0.35);
-        border: 2px solid rgb(61, 133, 253);
-    }
-    &.previous-sibling-selected {
-        border: 0;
-        .actions.related {
-            top: initial;
-            left: initial;
-            right: 0;
-            bottom: 0;
-            background-color: rgba(61, 133, 253, 0.75);
-            transform: scale(1) translateY(5%);
-        }
-        &:hover {
-            border: 2px dotted rgb(61, 133, 253);
-        }        
-    }
-    &.next-sibling-selected {
-        border: 0;
-        .actions.related {
-            top: initial;
-            left: 0;
-            right: initial;
-            bottom: 0;
-            background-color: rgba(61, 133, 253, 0.75);
-            transform: scale(1) translateY(5%);
-        }
-        &:hover {
-            border: 2px dotted rgb(61, 133, 253);
-        }        
-    }
-    &.parent-selected,
-    &.sibling-of-parent-selected {
-        border: 0;
-        .actions.related {
-            transform: scale(1) translateY(5%) translateX(-85%);
-            .btn {
-                background-color: rgba(61, 133, 253, 0.75);
-                color: white;
-            }
-        }
-        &:hover {
-            border: 2px dotted rgb(61, 133, 253);
-        }
-    }
-    &.grand-parent-selected {
-        border: 0;
-        .actions.related {
-            transform: scale(1) translateY(-75%) translateX(-95%);
-            .btn {
-                background-color: rgba(61, 133, 253, 0.75);
-                color: white;
-            }
-        }
-        &:hover {
-            border: 2px dotted rgb(61, 133, 253);
-        }
-    }
-
-    &#selected.editing {
-        background-color: transparent;
-
-        .actions.selected, .add-elements {
-            display: none;
-        }
-        
-        .actions.editing {
-            display: flex;
-        }
-    }
-
-    &#selected.add-elements {
-        background-color: transparent;
-
-        .actions.selected, .actions.editing {
-            display: none;
-        }
-        
-        .actions.add-elements {
-            display: flex;
-        }
-    }
-
-    .name {
-        white-space: nowrap;
-    }
-    > .name {
-        position: absolute;
-        top: 0;
-        transform: translateY(-100%);
-        left: 0px;
-    }
-
-    .name > .grand-parent {
-        background-color: green;
-        color: white;
-    }
-    .name > .parent {
-        background-color: yellow;
-        color: black;
-    }
-    .name > .elem {
-        background-color: #4285f4;
-        color: white;
-    }
-
-    .actions {
-        position: absolute;
-        z-index: 11;
-        top: 0;
-        transform: translateY(-100%);
-        right: 0px;
-        display: flex;
-        flex-wrap: nowrap;
-        &.editing { display: none; }
-        &.add-elements { display: none; }
-        justify-content: center;
-
-        a:hover {
-            background-color: #2777f8;
+    [slot="actions-top"] { 
+        background-color: rgba(61, 133, 253, 0.75);
+        &,* {
             color: white;
-            transform: scale(1.2);
-        }
-
-        .btn, .dropdown-menu {
-            background-color: #4285f4;
-            color: white;
-            font-size: 14px;
-            padding: 4px;
-            text-decoration: none;
-            pointer-events: initial;
-
-            i {
-                display: block;
-            }
-            i:before {
-                display: block;
-            }
-        }
-
-        &.related {
-            top: 0;
-            left: 0;
-            right: initial;
-            padding: 0;
-
-            .btn > {
-                padding: 2;
-            }
-        }
-        
-        &.bottom {
-            top: 100%;
-            left: 0px;
-            transform:translateY(-50%);
-
-            * {
-                border-radius: 10px;
-            }
         }
     }
 }
