fix wysiwyg editor

--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -3,6 +3,13 @@
 <link rel="stylesheet" href="/formuladb/icons/frmdb-icons.css" />
 <link rel="stylesheet" href="/formuladb-env/css/_transform.css">
 
+
+<frmdb-highlight id="highlight-box">
+    <div slot="actions-top">
+        <span class="component-name text-nowrap"></span>
+    </div>
+</frmdb-highlight>
+
 <frmdb-highlight id="selected-box">
     <div slot="actions-top">
         <slot name="actions-for-selected-elem"></slot>
