--- a/fe/src/highlight-box/highlight-box.component.scss
+++ b/fe/src/highlight-box/highlight-box.component.scss
@@ -1,11 +1,27 @@
 :host {
 
-    .highlighted {
+    #highlight-box {
         border: 2px dotted rgb(61, 133, 253);
     }
+    #select-box {
+        border: 2px solid rgb(61, 133, 253);
+    }
+    .selected:hover {
+        border: 4px dotted yellow;
+        [slot^="actions"] { 
+            background-color: yellow;
+        }
+    }
 
-    [slot="actions-top"] { 
+    [slot^="actions"] { 
         background-color: rgba(61, 133, 253, 0.75);
+        .dropdown-menu {
+            background-color: rgba(61, 133, 253, 0.75);
+        }
+        .btn:hover i {
+            transform: scale(1.2);
+        }
+
         &,* {
             color: white;
         }
