--- a/fe/src/wysiwyg-editor/wysiwyg-editor.component.html
+++ b/fe/src/wysiwyg-editor/wysiwyg-editor.component.html
@@ -1,7 +1,7 @@
-<div slot="actions-top">
-    <a class="btn" id="bold-btn" href="javascript:void(0)" title="Bold"><i><strong>B</strong></i></a>
-    <a class="btn" id="italic-btn" href="javascript:void(0)" title="Italic"><i>I</i></a>
-    <a class="btn" id="underline-btn" href="javascript:void(0)" title="Underline"><u>u</u></a>
-    <a class="btn" id="strike-btn" href="javascript:void(0)" title="Strikeout"><del>S</del></a>
-    <a class="btn" id="link-btn" href="javascript:void(0)" title="Create link"><strong>a</strong></a>
+<div slot="actions-top" class="d-flex flex-nowrap">
+    <a class="btn" onclick="$FCMP(this).action(event, 'bold')" href="javascript:void(0)" title="Bold"><i><strong>B</strong></i></a>
+    <a class="btn" onclick="$FCMP(this).action(event, 'italic')" href="javascript:void(0)" title="Italic"><i>I</i></a>
+    <a class="btn" onclick="$FCMP(this).action(event, 'underline')" href="javascript:void(0)" title="Underline"><u>u</u></a>
+    <a class="btn" onclick="$FCMP(this).action(event, 'strikeThrough')" href="javascript:void(0)" title="Strikeout"><del>S</del></a>
+    <a class="btn" onclick="$FCMP(this).action(event, 'createLink')" href="javascript:void(0)" title="Create link"><strong>a</strong></a>
 </div>
