fix wysiwyg undo

--- a/fe/src/highlight-box/highlight-box.component.scss
+++ b/fe/src/highlight-box/highlight-box.component.scss
@@ -3,7 +3,7 @@
     #highlight-box {
         border: 2px dotted rgb(61, 133, 253);
     }
-    #select-box {
+    #selected-box {
         border: 2px solid rgb(61, 133, 253);
     }
     .selected:hover {
