cut/copy paste element working

--- a/fe/src/highlight/highlight.component.scss
+++ b/fe/src/highlight/highlight.component.scss
@@ -35,6 +35,7 @@
             bottom: 0;
             left: 0;
             right: 0;
+            justify-content: center;
             align-items: center;
         }
         &.bottom {
