added also paste before element

--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -4,13 +4,13 @@
 <link rel="stylesheet" href="/formuladb-env/css/_transform.css">
 
 
-<frmdb-highlight id="highlight-box">
+<frmdb-highlight id="highlight-box" class="box">
     <div slot="actions-top">
         <span class="component-name text-nowrap"></span>
     </div>
 </frmdb-highlight>
 
-<frmdb-highlight id="selected-box">
+<frmdb-highlight id="selected-box" class="box">
     <div slot="actions-top">
         <slot name="actions-for-selected-elem"></slot>
     </div>
