--- a/fe/src/highlight/highlight.component.html
+++ b/fe/src/highlight/highlight.component.html
@@ -4,6 +4,9 @@
 <div class="actions top-left">
     <slot name="actions-top-left"></slot>
 </div>
+<div class="actions left">
+    <slot name="actions-left"></slot>
+</div>
 <div class="actions middle">
     <slot name="actions-middle"></slot>
 </div>
