--- a/fe/src/highlight/highlight.component.scss
+++ b/fe/src/highlight/highlight.component.scss
@@ -30,6 +30,14 @@
             left: 0;
             justify-content: left;
         }
+        &.left {
+            transform: translateX(-105%);
+            top: 0;
+            bottom: 0;
+            left: 0;
+            justify-content: center;
+            align-items: center;
+        }        
         &.middle {
             top: 0;
             bottom: 0;
