--- a/formuladb/icons/frmdb-icons.css
+++ b/formuladb/icons/frmdb-icons.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: "frmdb-icons";
-    src: url("./frmdb-icons.eot?167c902acd437ad327a3a2a34fa56fd9?#iefix") format("embedded-opentype"),
-url("./frmdb-icons.woff2?167c902acd437ad327a3a2a34fa56fd9") format("woff2"),
-url("./frmdb-icons.woff?167c902acd437ad327a3a2a34fa56fd9") format("woff"),
-url("./frmdb-icons.ttf?167c902acd437ad327a3a2a34fa56fd9") format("truetype"),
-url("./frmdb-icons.svg?167c902acd437ad327a3a2a34fa56fd9#frmdb-icons") format("svg");
+    src: url("./frmdb-icons.eot?1d09c5c93b3e75c66f7c93c8685faa9a?#iefix") format("embedded-opentype"),
+url("./frmdb-icons.woff2?1d09c5c93b3e75c66f7c93c8685faa9a") format("woff2"),
+url("./frmdb-icons.woff?1d09c5c93b3e75c66f7c93c8685faa9a") format("woff"),
+url("./frmdb-icons.ttf?1d09c5c93b3e75c66f7c93c8685faa9a") format("truetype"),
+url("./frmdb-icons.svg?1d09c5c93b3e75c66f7c93c8685faa9a#frmdb-icons") format("svg");
 }
 
 i[class^="frmdb-i-"]:before, i[class*=" frmdb-i-"]:before {
@@ -798,486 +798,489 @@ i[class^="frmdb-i-"]:before, i[class*=" frmdb-i-"]:before {
 .frmdb-i-bars:before {
     content: "\f204";
 }
-.frmdb-i-behance-square:before {
+.frmdb-i-before-box:before {
     content: "\f205";
 }
-.frmdb-i-behance:before {
+.frmdb-i-behance-square:before {
     content: "\f206";
 }
-.frmdb-i-bullseye:before {
+.frmdb-i-behance:before {
     content: "\f207";
 }
-.frmdb-i-calendar-alt:before {
+.frmdb-i-bullseye:before {
     content: "\f208";
 }
-.frmdb-i-calendar-check:before {
+.frmdb-i-calendar-alt:before {
     content: "\f209";
 }
-.frmdb-i-calendar-day:before {
+.frmdb-i-calendar-check:before {
     content: "\f20a";
 }
-.frmdb-i-calendar-minus:before {
+.frmdb-i-calendar-day:before {
     content: "\f20b";
 }
-.frmdb-i-calendar-plus:before {
+.frmdb-i-calendar-minus:before {
     content: "\f20c";
 }
-.frmdb-i-calendar-times:before {
+.frmdb-i-calendar-plus:before {
     content: "\f20d";
 }
-.frmdb-i-calendar-week:before {
+.frmdb-i-calendar-times:before {
     content: "\f20e";
 }
-.frmdb-i-calendar:before {
+.frmdb-i-calendar-week:before {
     content: "\f20f";
 }
-.frmdb-i-check-circle:before {
+.frmdb-i-calendar:before {
     content: "\f210";
 }
-.frmdb-i-check-double:before {
+.frmdb-i-check-circle:before {
     content: "\f211";
 }
-.frmdb-i-check-square:before {
+.frmdb-i-check-double:before {
     content: "\f212";
 }
-.frmdb-i-check:before {
+.frmdb-i-check-square:before {
     content: "\f213";
 }
-.frmdb-i-chevron-circle-left:before {
+.frmdb-i-check:before {
     content: "\f214";
 }
-.frmdb-i-chevron-circle-right:before {
+.frmdb-i-chevron-circle-left:before {
     content: "\f215";
 }
-.frmdb-i-chevron-down:before {
+.frmdb-i-chevron-circle-right:before {
     content: "\f216";
 }
-.frmdb-i-chevron-up:before {
+.frmdb-i-chevron-down:before {
     content: "\f217";
 }
-.frmdb-i-circle-notch:before {
+.frmdb-i-chevron-up:before {
     content: "\f218";
 }
-.frmdb-i-circle:before {
+.frmdb-i-circle-notch:before {
     content: "\f219";
 }
-.frmdb-i-clone:before {
+.frmdb-i-circle:before {
     content: "\f21a";
 }
-.frmdb-i-closed-captioning:before {
+.frmdb-i-clone:before {
     content: "\f21b";
 }
-.frmdb-i-cloud-download-alt:before {
+.frmdb-i-closed-captioning:before {
     content: "\f21c";
 }
-.frmdb-i-cogs-settings:before {
+.frmdb-i-cloud-download-alt:before {
     content: "\f21d";
 }
-.frmdb-i-copy:before {
+.frmdb-i-cogs-settings:before {
     content: "\f21e";
 }
-.frmdb-i-copyright:before {
+.frmdb-i-copy:before {
     content: "\f21f";
 }
-.frmdb-i-cube:before {
+.frmdb-i-copyright:before {
     content: "\f220";
 }
-.frmdb-i-cubes:before {
+.frmdb-i-cube:before {
     content: "\f221";
 }
-.frmdb-i-cursor-select:before {
+.frmdb-i-cubes:before {
     content: "\f222";
 }
-.frmdb-i-cut:before {
+.frmdb-i-cursor-select:before {
     content: "\f223";
 }
-.frmdb-i-cuttlefish:before {
+.frmdb-i-cut:before {
     content: "\f224";
 }
-.frmdb-i-database:before {
+.frmdb-i-cuttlefish:before {
     content: "\f225";
 }
-.frmdb-i-dribbble-square:before {
+.frmdb-i-database:before {
     content: "\f226";
 }
-.frmdb-i-dribbble:before {
+.frmdb-i-dribbble-square:before {
     content: "\f227";
 }
-.frmdb-i-edit:before {
+.frmdb-i-dribbble:before {
     content: "\f228";
 }
-.frmdb-i-ellipsis-v:before {
+.frmdb-i-edit:before {
     content: "\f229";
 }
-.frmdb-i-expand-arrows-alt:before {
+.frmdb-i-ellipsis-v:before {
     content: "\f22a";
 }
-.frmdb-i-expand:before {
+.frmdb-i-expand-arrows-alt:before {
     content: "\f22b";
 }
-.frmdb-i-eye-dropper:before {
+.frmdb-i-expand:before {
     content: "\f22c";
 }
-.frmdb-i-eye-slash:before {
+.frmdb-i-eye-dropper:before {
     content: "\f22d";
 }
-.frmdb-i-eye:before {
+.frmdb-i-eye-slash:before {
     content: "\f22e";
 }
-.frmdb-i-facebook-f:before {
+.frmdb-i-eye:before {
     content: "\f22f";
 }
-.frmdb-i-facebook-messenger:before {
+.frmdb-i-facebook-f:before {
     content: "\f230";
 }
-.frmdb-i-facebook-square:before {
+.frmdb-i-facebook-messenger:before {
     content: "\f231";
 }
-.frmdb-i-facebook:before {
+.frmdb-i-facebook-square:before {
     content: "\f232";
 }
-.frmdb-i-file-alt:before {
+.frmdb-i-facebook:before {
     content: "\f233";
 }
-.frmdb-i-file-archive:before {
+.frmdb-i-file-alt:before {
     content: "\f234";
 }
-.frmdb-i-file-audio:before {
+.frmdb-i-file-archive:before {
     content: "\f235";
 }
-.frmdb-i-file-code:before {
+.frmdb-i-file-audio:before {
     content: "\f236";
 }
-.frmdb-i-file-contract:before {
+.frmdb-i-file-code:before {
     content: "\f237";
 }
-.frmdb-i-file-csv:before {
+.frmdb-i-file-contract:before {
     content: "\f238";
 }
-.frmdb-i-file-download:before {
+.frmdb-i-file-csv:before {
     content: "\f239";
 }
-.frmdb-i-file-excel:before {
+.frmdb-i-file-download:before {
     content: "\f23a";
 }
-.frmdb-i-file-export:before {
+.frmdb-i-file-excel:before {
     content: "\f23b";
 }
-.frmdb-i-file-image:before {
+.frmdb-i-file-export:before {
     content: "\f23c";
 }
-.frmdb-i-file-import:before {
+.frmdb-i-file-image:before {
     content: "\f23d";
 }
-.frmdb-i-file-invoice-dollar:before {
+.frmdb-i-file-import:before {
     content: "\f23e";
 }
-.frmdb-i-file-invoice:before {
+.frmdb-i-file-invoice-dollar:before {
     content: "\f23f";
 }
-.frmdb-i-file-medical-alt:before {
+.frmdb-i-file-invoice:before {
     content: "\f240";
 }
-.frmdb-i-file-medical:before {
+.frmdb-i-file-medical-alt:before {
     content: "\f241";
 }
-.frmdb-i-file-pdf:before {
+.frmdb-i-file-medical:before {
     content: "\f242";
 }
-.frmdb-i-file-powerpoint:before {
+.frmdb-i-file-pdf:before {
     content: "\f243";
 }
-.frmdb-i-file-prescription:before {
+.frmdb-i-file-powerpoint:before {
     content: "\f244";
 }
-.frmdb-i-file-signature:before {
+.frmdb-i-file-prescription:before {
     content: "\f245";
 }
-.frmdb-i-file-upload:before {
+.frmdb-i-file-signature:before {
     content: "\f246";
 }
-.frmdb-i-file-video:before {
+.frmdb-i-file-upload:before {
     content: "\f247";
 }
-.frmdb-i-file-word:before {
+.frmdb-i-file-video:before {
     content: "\f248";
 }
-.frmdb-i-file:before {
+.frmdb-i-file-word:before {
     content: "\f249";
 }
-.frmdb-i-flag-icons-4x3-bg:before {
+.frmdb-i-file:before {
     content: "\f24a";
 }
-.frmdb-i-flag-icons-4x3-de:before {
+.frmdb-i-flag-icons-4x3-bg:before {
     content: "\f24b";
 }
-.frmdb-i-flag-icons-4x3-es:before {
+.frmdb-i-flag-icons-4x3-de:before {
     content: "\f24c";
 }
-.frmdb-i-flag-icons-4x3-fr:before {
+.frmdb-i-flag-icons-4x3-es:before {
     content: "\f24d";
 }
-.frmdb-i-flag-icons-4x3-gb:before {
+.frmdb-i-flag-icons-4x3-fr:before {
     content: "\f24e";
 }
-.frmdb-i-flag-icons-4x3-gr:before {
+.frmdb-i-flag-icons-4x3-gb:before {
     content: "\f24f";
 }
-.frmdb-i-flag-icons-4x3-it:before {
+.frmdb-i-flag-icons-4x3-gr:before {
     content: "\f250";
 }
-.frmdb-i-flag-icons-4x3-nl:before {
+.frmdb-i-flag-icons-4x3-it:before {
     content: "\f251";
 }
-.frmdb-i-flag-icons-4x3-pl:before {
+.frmdb-i-flag-icons-4x3-nl:before {
     content: "\f252";
 }
-.frmdb-i-flag-icons-4x3-pt:before {
+.frmdb-i-flag-icons-4x3-pl:before {
     content: "\f253";
 }
-.frmdb-i-flag-icons-4x3-ro:before {
+.frmdb-i-flag-icons-4x3-pt:before {
     content: "\f254";
 }
-.frmdb-i-flag-icons-4x3-sv:before {
+.frmdb-i-flag-icons-4x3-ro:before {
     content: "\f255";
 }
-.frmdb-i-frown-open:before {
+.frmdb-i-flag-icons-4x3-sv:before {
     content: "\f256";
 }
-.frmdb-i-github-alt:before {
+.frmdb-i-frown-open:before {
     content: "\f257";
 }
-.frmdb-i-github-square:before {
+.frmdb-i-github-alt:before {
     content: "\f258";
 }
-.frmdb-i-github:before {
+.frmdb-i-github-square:before {
     content: "\f259";
 }
-.frmdb-i-google-drive:before {
+.frmdb-i-github:before {
     content: "\f25a";
 }
-.frmdb-i-google-play:before {
+.frmdb-i-google-drive:before {
     content: "\f25b";
 }
-.frmdb-i-google-plus-g:before {
+.frmdb-i-google-play:before {
     content: "\f25c";
 }
-.frmdb-i-google-plus-square:before {
+.frmdb-i-google-plus-g:before {
     content: "\f25d";
 }
-.frmdb-i-google-plus:before {
+.frmdb-i-google-plus-square:before {
     content: "\f25e";
 }
-.frmdb-i-google-wallet:before {
+.frmdb-i-google-plus:before {
     content: "\f25f";
 }
-.frmdb-i-google:before {
+.frmdb-i-google-wallet:before {
     content: "\f260";
 }
-.frmdb-i-grand-parent-element:before {
+.frmdb-i-google:before {
     content: "\f261";
 }
-.frmdb-i-hand-point-left:before {
+.frmdb-i-grand-parent-element:before {
     content: "\f262";
 }
-.frmdb-i-hand-point-up:before {
+.frmdb-i-hand-point-left:before {
     content: "\f263";
 }
-.frmdb-i-home:before {
+.frmdb-i-hand-point-up:before {
     content: "\f264";
 }
-.frmdb-i-image:before {
+.frmdb-i-home:before {
     content: "\f265";
 }
-.frmdb-i-images:before {
+.frmdb-i-image:before {
     content: "\f266";
 }
-.frmdb-i-info-circle:before {
+.frmdb-i-images:before {
     content: "\f267";
 }
-.frmdb-i-info:before {
+.frmdb-i-info-circle:before {
     content: "\f268";
 }
-.frmdb-i-inside-box:before {
+.frmdb-i-info:before {
     content: "\f269";
 }
-.frmdb-i-instagram:before {
+.frmdb-i-inside-box:before {
     content: "\f26a";
 }
-.frmdb-i-laptop-code:before {
+.frmdb-i-instagram:before {
     content: "\f26b";
 }
-.frmdb-i-laptop-medical:before {
+.frmdb-i-laptop-code:before {
     content: "\f26c";
 }
-.frmdb-i-laptop:before {
+.frmdb-i-laptop-medical:before {
     content: "\f26d";
 }
-.frmdb-i-level-down-alt:before {
+.frmdb-i-laptop:before {
     content: "\f26e";
 }
-.frmdb-i-linkedin-in:before {
+.frmdb-i-level-down-alt:before {
     content: "\f26f";
 }
-.frmdb-i-linkedin:before {
+.frmdb-i-linkedin-in:before {
     content: "\f270";
 }
-.frmdb-i-lock-open:before {
+.frmdb-i-linkedin:before {
     content: "\f271";
 }
-.frmdb-i-lock:before {
+.frmdb-i-lock-open:before {
     content: "\f272";
 }
-.frmdb-i-minus-circle:before {
+.frmdb-i-lock:before {
     content: "\f273";
 }
-.frmdb-i-mobile-alt:before {
+.frmdb-i-minus-circle:before {
     content: "\f274";
 }
-.frmdb-i-paperclip:before {
+.frmdb-i-mobile-alt:before {
     content: "\f275";
 }
-.frmdb-i-parent-element:before {
+.frmdb-i-paperclip:before {
     content: "\f276";
 }
-.frmdb-i-pen-fancy:before {
+.frmdb-i-parent-element:before {
     content: "\f277";
 }
-.frmdb-i-phone-alt:before {
+.frmdb-i-pen-fancy:before {
     content: "\f278";
 }
-.frmdb-i-phone-slash:before {
+.frmdb-i-phone-alt:before {
     content: "\f279";
 }
-.frmdb-i-phone-square-alt:before {
+.frmdb-i-phone-slash:before {
     content: "\f27a";
 }
-.frmdb-i-phone-square:before {
+.frmdb-i-phone-square-alt:before {
     content: "\f27b";
 }
-.frmdb-i-phone-volume:before {
+.frmdb-i-phone-square:before {
     content: "\f27c";
 }
-.frmdb-i-phone:before {
+.frmdb-i-phone-volume:before {
     content: "\f27d";
 }
-.frmdb-i-plus-circle:before {
+.frmdb-i-phone:before {
     content: "\f27e";
 }
-.frmdb-i-plus-square:before {
+.frmdb-i-plus-circle:before {
     content: "\f27f";
 }
-.frmdb-i-plus:before {
+.frmdb-i-plus-square:before {
     content: "\f280";
 }
-.frmdb-i-save:before {
+.frmdb-i-plus:before {
     content: "\f281";
 }
-.frmdb-i-search-dollar:before {
+.frmdb-i-save:before {
     content: "\f282";
 }
-.frmdb-i-search-location:before {
+.frmdb-i-search-dollar:before {
     content: "\f283";
 }
-.frmdb-i-search-minus:before {
+.frmdb-i-search-location:before {
     content: "\f284";
 }
-.frmdb-i-search-plus:before {
+.frmdb-i-search-minus:before {
     content: "\f285";
 }
-.frmdb-i-search:before {
+.frmdb-i-search-plus:before {
     content: "\f286";
 }
-.frmdb-i-searchengin:before {
+.frmdb-i-search:before {
     content: "\f287";
 }
-.frmdb-i-sibling-element:before {
+.frmdb-i-searchengin:before {
     content: "\f288";
 }
-.frmdb-i-sitemap:before {
+.frmdb-i-sibling-element:before {
     content: "\f289";
 }
-.frmdb-i-square-full:before {
+.frmdb-i-sitemap:before {
     content: "\f28a";
 }
-.frmdb-i-square-root-alt:before {
+.frmdb-i-square-full:before {
     content: "\f28b";
 }
-.frmdb-i-square:before {
+.frmdb-i-square-root-alt:before {
     content: "\f28c";
 }
-.frmdb-i-squarespace:before {
+.frmdb-i-square:before {
     content: "\f28d";
 }
-.frmdb-i-star-and-crescent:before {
+.frmdb-i-squarespace:before {
     content: "\f28e";
 }
-.frmdb-i-star-half-alt:before {
+.frmdb-i-star-and-crescent:before {
     content: "\f28f";
 }
-.frmdb-i-star-half:before {
+.frmdb-i-star-half-alt:before {
     content: "\f290";
 }
-.frmdb-i-star-of-david:before {
+.frmdb-i-star-half:before {
     content: "\f291";
 }
-.frmdb-i-star-of-life:before {
+.frmdb-i-star-of-david:before {
     content: "\f292";
 }
-.frmdb-i-star:before {
+.frmdb-i-star-of-life:before {
     content: "\f293";
 }
-.frmdb-i-table-tennis:before {
+.frmdb-i-star:before {
     content: "\f294";
 }
-.frmdb-i-table:before {
+.frmdb-i-table-tennis:before {
     content: "\f295";
 }
-.frmdb-i-tablet-alt:before {
+.frmdb-i-table:before {
     content: "\f296";
 }
-.frmdb-i-tablet:before {
+.frmdb-i-tablet-alt:before {
     content: "\f297";
 }
-.frmdb-i-tablets:before {
+.frmdb-i-tablet:before {
     content: "\f298";
 }
-.frmdb-i-tint-slash:before {
+.frmdb-i-tablets:before {
     content: "\f299";
 }
-.frmdb-i-tint:before {
+.frmdb-i-tint-slash:before {
     content: "\f29a";
 }
-.frmdb-i-tmp:before {
+.frmdb-i-tint:before {
     content: "\f29b";
 }
-.frmdb-i-trash-alt:before {
+.frmdb-i-tmp:before {
     content: "\f29c";
 }
-.frmdb-i-trash-restore-alt:before {
+.frmdb-i-trash-alt:before {
     content: "\f29d";
 }
-.frmdb-i-trash-restore:before {
+.frmdb-i-trash-restore-alt:before {
     content: "\f29e";
 }
-.frmdb-i-trash:before {
+.frmdb-i-trash-restore:before {
     content: "\f29f";
 }
-.frmdb-i-twitter-square:before {
+.frmdb-i-trash:before {
     content: "\f2a0";
 }
-.frmdb-i-twitter:before {
+.frmdb-i-twitter-square:before {
     content: "\f2a1";
 }
-.frmdb-i-undo-alt:before {
+.frmdb-i-twitter:before {
     content: "\f2a2";
 }
-.frmdb-i-undo:before {
+.frmdb-i-undo-alt:before {
     content: "\f2a3";
 }
-.frmdb-i-upload:before {
+.frmdb-i-undo:before {
     content: "\f2a4";
 }
-.frmdb-i-window-close:before {
+.frmdb-i-upload:before {
     content: "\f2a5";
+}
+.frmdb-i-window-close:before {
+    content: "\f2a6";
 }
