--- a/fe/src/highlight/highlight.component.scss
+++ b/fe/src/highlight/highlight.component.scss
@@ -2,15 +2,17 @@
     display: none !important;
 }
 
+:host(.is-at-top) {
+    .actions.top { 
+        transform: translateY(0%); 
+    }
+}
+
 :host {
     position: absolute;
     display: block;
     pointer-events: none;
     z-index: 10;
-
-    &.is-at-top .actions.top { 
-        transform: translateY(0%); 
-    }
 
     .actions {
         position: absolute;
