fix navigation to different app inside editor

--- a/fe/src/frmdb-editor/add-element.component.html
+++ b/fe/src/frmdb-editor/add-element.component.html
@@ -18,7 +18,7 @@
                             <frmdb-highlight-box class="names-hidden">
                                 <div slot="actions-for-selected-elem">
                                     <a class="btn" onclick="$FCMP(this).triggerAddElementFlow()" href="javascript:void(0)" title="Choose Element"><i
-                                            class="frmdb-i-cursor-select"></i></a>
+                                            class="frmdb-i-plus-circle"></i></a>
                                 </div>
                             </frmdb-highlight-box>
                         </div>
