fix add element flow

--- a/fe/src/frmdb-editor/add-element.component.html
+++ b/fe/src/frmdb-editor/add-element.component.html
@@ -17,7 +17,7 @@
                             <iframe class="vh-85" src="../../frmdb-apps/base-app/landing-page.html"></iframe>
                             <frmdb-highlight-box class="names-hidden">
                                 <div slot="actions-for-selected-elem">
-                                    <a class="btn" onclick="$FCMP(this).triggerAddElementFlow()" href="javascript:void(0)" title="Choose Element"><i
+                                    <a class="btn" onclick="this.closest('frmdb-add-element').triggerAddElementFlow()" href="javascript:void(0)" title="Choose Element"><i
                                             class="frmdb-i-plus-circle"></i></a>
                                 </div>
                             </frmdb-highlight-box>
