--- a/fe/src/highlight/highlight.component.html
+++ b/fe/src/highlight/highlight.component.html
@@ -1,11 +1,11 @@
 <div class="actions top">
     <slot name="actions-top"></slot>
 </div>
-<div class="actions top-left">
-    <slot name="actions-top-left"></slot>
-</div>
 <div class="actions left">
     <slot name="actions-left"></slot>
+</div>
+<div class="actions right">
+    <slot name="actions-right"></slot>
 </div>
 <div class="actions middle">
     <slot name="actions-middle"></slot>
