--- a/git/formuladb-env/frmdb-apps/base-app/__data-grid.component.html
+++ b/git/formuladb-env/frmdb-apps/base-app/__data-grid.component.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <frmdb-data-grid style="width: 900px; height: 500px;" table-name="RoomBooking" expand-row="#edit-record-modal" no-floating-filters="false">
+    <frmdb-data-grid style="width: 900px; height: 500px;" table-name="$Page" expand-row="#edit-record-modal" no-floating-filters="false">
     </frmdb-data-grid>
 
     <iframe src="/formuladb/editor-edit-record-modal.html"
