work on base-app and themes

--- a/themes/frmdb/_frmdb.scss
+++ b/themes/frmdb/_frmdb.scss
@@ -12,6 +12,8 @@
 @import "./frmdb-editor";
 @import "./tooltip";
 @import "./icons";
+@import "./components";
+@import "./position";
 
 .fa {
     font-family: 'Font Awesome 5 Free';
