fix Clean theme

--- a/themes/frmdb/components/_cover.scss
+++ b/themes/frmdb/components/_cover.scss
@@ -1,4 +1,9 @@
 .frmdb-t-cover {
     display: grid;
+    grid-template-columns: 1fr;
     grid-template-rows: auto 1fr auto;
+
+    > * {
+        grid-column: 1 / span 1;
+    }
 }
