fix card alignment

--- a/fe/src/frmdb-editor/icon-editor.component.html
+++ b/fe/src/frmdb-editor/icon-editor.component.html
@@ -25,7 +25,7 @@
                                 </div>
                             </div>
 
-                            <div class="card-deck flex-grow-1 frmdb-cards-wrap-5 text-center overflow-auto">
+                            <div class="card-deck flex-grow-1 frmdb-cards-5 text-center overflow-auto">
                                 <a style="cursor: pointer" class="card border-0" data-frmdb-table="$FRMDB.$Icon[]" data-frmdb-table-limit="50">
                                     <h1>
                                         <frmdb-icon data-frmdb-attr="name::$FRMDB.$Icon[]._id"></frmdb-icon>
@@ -44,7 +44,7 @@
                                     <span class="input-group-text"><i class="frmdb-i-search"></i></span>
                                 </div>
                             </div>
-                            <div class="card-deck frmdb-cards-wrap-5">
+                            <div class="card-deck frmdb-cards-5">
                                 <a style="cursor: pointer" class="card border-0 text-center" data-frmdb-table="premiumIcons[]"
                                     data-frmdb-attr="data-frmdb-premium-icon-id::premiumIcons[].iconId">
                                     <img class="border rounded" data-frmdb-value="premiumIcons[].previewURL" data-frmdb-attr="alt::paidIconsUrls[].previewURL"
