--- a/fe/src/theme-customizer/theme-customizer.component.html
+++ b/fe/src/theme-customizer/theme-customizer.component.html
@@ -18,7 +18,7 @@
             <i class="frmdb-i-2669552-font"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" style="width: 50vw; height: 50vh; overflow: auto" aria-labelledby="frmdb-editor-look-select">
-            <div class="card-deck frmdb-cards-wrap-2">
+            <div class="card-deck frmdb-cards-2">
                 <a  data-frmdb-table="looks[]" data-frmdb-attr="href:looks[].urlPathname" 
                     class="dropdown-item card p-2 m-2" style="transform: scale(0.85);"
                     data-frmdb-attr3="class.active:looks[].active"
